# LeNet-5_CNN_in_C

./: CMakeLists.txt  README.md  cnn.c  cnn.h  parameters.txt
.cache/clangd/index/: cnn.c.09D5594D45CB378B.idx  cnn.h.70A8A1052B89E815.idx
include/: cnn.h
src/: cnn.c
